--- a/petwell/pubspec.yaml
+++ b/petwell/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   image_picker: ^1.0.7
   js: ^0.7.1 
   cupertino_icons: ^1.0.8
+  fl_chart: ^0.65.0
+  intl: ^0.20.2
+  font_awesome_flutter: ^10.1.0 
+
 
 dev_dependencies:
   flutter_test:
