--- a/petwell/pubspec.yaml
+++ b/petwell/pubspec.yaml
@@ -35,8 +35,15 @@ dependencies:
   cloud_firestore: ^5.6.6
   firebase_storage: ^12.4.5
   image_picker: ^1.0.7
-  js: ^0.7.1 
+  file_picker: ^10.1.2
+  provider: ^6.1.1
+  path: ^1.8.0
+  path_provider: ^2.0.0
+  uuid: ^4.3.1
+  intl: ^0.20.2
+  js: ^0.7.1
   cupertino_icons: ^1.0.8
+  cross_file: ^0.3.3
 
 dev_dependencies:
   flutter_test:
