--- a/petwell/pubspec.yaml
+++ b/petwell/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   js: ^0.7.1
   cupertino_icons: ^1.0.8
   cross_file: ^0.3.3
+  google_sign_in: ^6.2.1
+  
 
 dev_dependencies:
   flutter_test:
