--- a/petwell/pubspec.yaml
+++ b/petwell/pubspec.yaml
@@ -51,7 +51,9 @@ dependencies:
   fl_chart: ^1.0.0
   table_calendar: ^3.0.9
   carousel_slider: ^5.0.0
-  
+  http: ^1.2.2
+  geolocator: ^13.0.1
+  weather_icons: ^3.0.0
 
 
 dev_dependencies:
